count finished tx
